Added F engine install

--- a/bayesian-inference.ipynb
+++ b/bayesian-inference.ipynb
@@ -416,8 +416,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !rm FortranEngine.cpython-36m-x86_64-linux-gnu.so \n",
-    "# !f2py3 engine.f90 -m FortranEngine -c"
+    "!rm FortranEngine.cpython-36m-x86_64-linux-gnu.so \n",
+    "!f2py3 engine.f90 -m FortranEngine -c"
    ]
   },
   {
